[tool.poetry]
name = "joffrelakes"
version = "0.1.0"
description = ""
authors = ["artickl <artem.zavyalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
mplcyberpunk = "^0.7.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
